fixing the layout for the hero on small device

--- a/app/globals.css
+++ b/app/globals.css
@@ -90,19 +90,19 @@ body {
 
     /* Dark overlay biar teks kebaca */
     .overlay {
-      @apply absolute inset-0 bg-black/40 z-[1];
+      @apply absolute inset-0 bg-black/40 z-[1] backdrop-blur-[2px];
     }
 
     /* Main content */
     .content {
       @apply relative z-10 flex flex-col items-center text-center
             text-white uppercase font-family-zendots
-            px-6 gap-8;
+            px-0 md:px-6 gap-12;
     }
 
     /* Title */
     .hero-title {
-      @apply text-4xl md:text-6xl lg:text-7xl tracking-widest;
+      @apply text-white text-5xl leading-14 md:text-6xl font-bold tracking-widest text-center drop-shadow-lg font-family-zendots;
 
       span {
         @apply text-sky-300;
@@ -111,12 +111,12 @@ body {
 
     /* Middle section */
     .middle-content {
-      @apply grid grid-cols-3 items-center gap-6
-            max-w-7xl w-full;
+      @apply relative flex justify-center items-center
+            max-w-7xl w-full px-8;
     }
 
-    h2 {
-      @apply text-lg md:text-xl lg:text-5xl leading-tight;
+    .text-img {
+      @apply absolute hidden md:block justify-between items-center px-10 w-full text-base text-shadow-cyan-500;
     }
 
     .left-text {
@@ -133,14 +133,18 @@ body {
     }
 
     .thumbnail {
-      @apply rounded-2xl shadow-2xl
-        hover:scale-105
+      @apply hover:scale-105
         transition duration-300
         transform-gpu
-        will-change-transform;
+        object-cover
+        will-change-transform
+         rounded-3xl
+  shadow-[0_20px_60px_rgba(0,0,0,0.4)]
+  ring-1 ring-white/20
+  backdrop-blur;
     }
     .hero-subtitle {
-      @apply text-sm md:text-base tracking-wider opacity-80;
+      @apply text-lg md:text-2xl tracking-[0.15em] text-white opacity-70 px-8;
     }
   }
   .ticket-section {
